--- a/MyApplication/thirdwindow.ui
+++ b/MyApplication/thirdwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>760</height>
+    <width>420</width>
+    <height>761</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,7 +18,7 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>400</width>
+    <width>420</width>
     <height>0</height>
    </size>
   </property>
@@ -82,7 +82,7 @@
                <widget class="QLabel" name="label_6">
                 <property name="minimumSize">
                  <size>
-                  <width>0</width>
+                  <width>85</width>
                   <height>30</height>
                  </size>
                 </property>
@@ -95,7 +95,7 @@
                 <property name="font">
                  <font>
                   <family>Times New Roman</family>
-                  <pointsize>16</pointsize>
+                  <pointsize>15</pointsize>
                  </font>
                 </property>
                 <property name="styleSheet">
@@ -126,7 +126,7 @@
                 <property name="font">
                  <font>
                   <family>Times New Roman</family>
-                  <pointsize>16</pointsize>
+                  <pointsize>15</pointsize>
                  </font>
                 </property>
                 <property name="styleSheet">
@@ -244,7 +244,7 @@
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>29</height>
+              <height>30</height>
              </size>
             </property>
             <property name="maximumSize">
@@ -256,7 +256,7 @@
             <property name="font">
              <font>
               <family>Times New Roman</family>
-              <pointsize>16</pointsize>
+              <pointsize>15</pointsize>
              </font>
             </property>
             <property name="styleSheet">
@@ -273,23 +273,38 @@
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <widget class="QLabel" name="label_8">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>30</height>
+             </size>
+            </property>
             <property name="font">
              <font>
               <family>Times New Roman</family>
-              <pointsize>16</pointsize>
+              <pointsize>15</pointsize>
              </font>
             </property>
             <property name="text">
              <string>У вас нету аккаунта?</string>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignmentFlag::AlignCenter</set>
+            </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_4">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>30</height>
+             </size>
+            </property>
             <property name="font">
              <font>
               <family>Times New Roman</family>
-              <pointsize>16</pointsize>
+              <pointsize>15</pointsize>
              </font>
             </property>
             <property name="text">
@@ -319,6 +334,12 @@
       </item>
       <item>
        <widget class="QRadioButton" name="radioButton_2">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
           <width>150</width>
@@ -328,7 +349,7 @@
         <property name="font">
          <font>
           <family>Times New Roman</family>
-          <pointsize>16</pointsize>
+          <pointsize>15</pointsize>
          </font>
         </property>
         <property name="styleSheet">
